--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World!
+# <h1>Hello World!</h1>
+
+ <h2>Stitchfix</h2>
+<p> Languages in use: React, Redux</p>
+ <p> Other tech in use: Vitctor, Elasticsearch, Apache Spark, Bootstrap, Heroku, Rails, Amazon Cloud Front. </p>
+
+<h2>Google</h2>
+<p> Languages in use: Python, Java, Angular JS, C++, Preact.</p>
+<p> Other tech in use: Android SDK, Golang, Material Design, Material Design Lite.</p>
